# obs-text-pango

./: CMakeLists.txt  README.md  text-pango.c  text-pango.h  text-utilities.h
cmake/: FindCairo.cmake  FindFontconfig.cmake  FindHarfBuzz.cmake  FindPango.cmake  FindPangocairo.cmake  FindPangoft2.cmake  FindPangowin32.cmake
data/apple/: fonts.conf
data/apple/conf.d/: 50-user.conf
data/common/locale/: ar-SA.ini  bn-BD.ini  ca-ES.ini  cs-CZ.ini  da-DK.ini  de-DE.ini  el-GR.ini  en-US.ini  es-ES.ini  et-EE.ini  eu-ES.ini  fi-FI.ini  fr-FR.ini  gl-ES.ini  he-IL.ini  hu-HU.ini  it-IT.ini  ja-JP.ini  ko-KR.ini  nb-NO.ini  nl-NL.ini  pl-PL.ini  pt-BR.ini  pt-PT.ini  ro-RO.ini  ru-RU.ini  sk-SK.ini  sl-SI.ini  sr-CS.ini  sr-SP.ini  sv-SE.ini  tr-TR.ini  uk-UA.ini  vi-VN.ini  zh-CN.ini  zh-TW.ini
data/win32/: fonts.conf
fonts/: fonts.conf
util/mac/: copy_all_deps.sh  copy_and_relocate.rb  otoolr.py
